--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ arabic-reshaper>=2.1.3
 python-bidi>=0.4.2
 seaborn>=0.11.2
 matplotlib>=3.4.3
+torch>=1.9.0
+transformers>=4.5.0
+networkx>=2.6.3
+folium>=0.12.1
+community>=1.0.0b1
+pytest>=6.2.5
